"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16-PRS-07-01:
	  Branchlet to support Clint's proposed PRS annotations.
	  This revision augmented the prs_and and prs_or syntax to support
		an (optional) operator-suffix attribute for precharge notation.
		The tokens, however, are just deleted, and not processed,
			as per request.  
		A scant few test expect-fails updated (yacc-only), no changes
			necessary for bison.  


2007-04-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-16:
	  Minor bug fix: lacking diagnostic when redeclaring an instance
		with different meta-type.  Fixed by catching a std::bad_cast.
		Added test-case basic/024.


2007-03-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15:
	  Added dump-trace function to guile/chpsim-wrap.cc, 
		including a basic test case.  
	  Test suite added support for new hacchpsimscm script tests.  
	  Coming soon: scheme trace interface.


2007-03-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-14:
	  No source revision, corrected Makefile.am to build guile
		libraries conditionally.  


2007-03-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-13:
	  Noted major flaw in guile/C+++ interoperability in BUGS.
	  New program: 'hacchpsimguile' intended for chpsim trace analysis.
		Added: main/chpsim-guile.{cc,h}, guile/chpsim-wrap.{h,cc}
	  TODO: export more functions and operations on chpsim state.


	* HACKT-00-01-04-main-00-81-12:
	  Critical fix: hackt lexer was corrupting pointer due to improper
		pointer class assignment, which compiler SHOULD have rejected.
		Oddly, this problem manifested on g++-4.0.1, but not 3.3.
		Neither compiler caught the problem... because the only