@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-04-10	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-16-PRS-07-02:
+	  Added new language bodies 'tree' and 'subckt' as per Clint's request
+		to support extensions in forked tool-chain.  
+	  NOTE: this adds new keywords!!! don't blame me for breakage.  :P
+	  Added a few minimal test cases.
+
+
 2007-04-09	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-16-PRS-07-01:
